<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_qrcode"
            android:icon="@android:drawable/ic_menu_crop"
            android:title="@string/menu_qrcode" />
        <item
            android:id="@+id/nav_incluirproduto"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_incluirproduto" />
        <item
            android:id="@+id/nav_pesquisa"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_pesquisa" />
    </group>
</menu>