<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rr.ars.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_qrcode"
        android:name="com.rr.ars.ui.qrcode.QrcodeFragment"
        android:label="@string/menu_qrcode"
        tools:layout="@layout/fragment_qrcode" />

    <fragment
        android:id="@+id/nav_incluirproduto"
        android:name="com.rr.ars.ui.incluirproduto.IncluirProdutoFragment"
        android:label="@string/menu_incluirproduto"
        tools:layout="@layout/fragment_incluirproduto" />

    <fragment
        android:id="@+id/nav_pesquisa"
        android:name="com.rr.ars.ui.pesquisa.PesquisaFragment"
        android:label="@string/menu_pesquisa"
        tools:layout="@layout/fragment_pesquisa" />
</navigation>