<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pesquisa.PesquisaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pesquisa_uid" />

            <EditText
                android:id="@+id/editTextUidPesquisa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="UID"
                android:inputType="text" />

            <Button
                android:id="@+id/leituraQrcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_scanearqrcode" />

            <Button
                android:id="@+id/buttonPesquisar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_pesquisar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPosicaoX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Posição X:" />

                <TextView
                    android:id="@+id/textViewPosicaoY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Posição Y:" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewArmazem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Armázem:" />

                <TextView
                    android:id="@+id/textViewPrateleira"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Prateleira:" />
            </LinearLayout>

            <com.rr.ars.ui.CustomGridView
                android:id="@+id/customGridView"
                android:layout_width="wrap_content"
                android:layout_height="550dp"
                android:layout_marginVertical="10dp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>